<resources>
    <string name="app_name">Camping Companion (bluetooth)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">New Devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_found">No Devices Found</string>
    <string name="scanning">scanning</string>
    <string name="select_device">select_device</string>
    <string name="none_paired">No Devices Paired</string>
    <string name="bt_not_enabled_leaving">bt_not_enabled_leaving</string>
    <!-- String for home activity-->
    <string name="LightsText">Lights</string>
    <string name="StatusText">Status</string>
    <string name="LocationText">Location</string>
    <string name="CaptainsLogText">Captains Log</string>
    <string name="ConnectText">Connect to PEBL</string>
    <!-- String for set up activity-->
    <string name="StartText">Start Here</string>
    <!-- String for connections activity-->
    <string name="ConnectionHeader">The available devices are shown\nbelow, please select your\nPEBL below</string>
    <!-- String for lights activity-->
    <string name="BlueText">Blue</string>
    <string name="RedText">Red</string>
    <string name="GreenText">Green</string>
    <string name="TurnLightsOffText">Turn Off</string>
    <string name="TurnLightsOnText">Turn On</string>
    <string name="SelectedColorText">Selected Color</string>
    <string name="ManualColorText">Manual Color</string>
    <string name="PreMadeColorText">Pre-made Colors</string>
    <string name="Pattern1Text">Pattern 1</string>
    <string name="Pattern2Text">Pattern 2</string>
    <string name="Pattern3Text">Pattern 3</string>
    <!-- Feed Strings-->
    <string name="TakePictureText">Take Picture</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="ConfirmPasswordHint">Confirm Password</string>
    <string name="SignInText">Sign In</string>
    <string name="NewAccountText">Don\'t have an account?</string>
    <!-- Status Strings-->
    <string name="TempText">Temp:</string>
    <string name="BaroPressureText">Barometric Pressure:</string>
    <string name="HumidityyText">Humidity:</string>

    <!-- General Strings-->
    <string name="NotSetText">Not Set</string>
    <string name="Key">AIzaSyDIUKMybAWPwXiw_zPYJql82xzyXtHIOT0</string>
    <string name="CenterText">Center</string>
    <string name="ClickHereText">Click Here</string>
    <string name="BackText">Back</string>
    <string name="CancelText">Cancel</string>
    <string name="SaveText">Save</string>
    <string name="SetText">Set</string>
</resources>
