<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/LoginDialogUsernameEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/EmailHint" />
    <EditText
        android:id="@+id/LoginDialogPasswordEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/PasswordHint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/LoginDialogCancel"
            android:layout_width="0dp"
            android:layout_weight = ".5"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/CancelText"/>
        <Button
            android:id="@+id/LoginDialogAuthenticate"
            android:layout_width="0dp"
            android:layout_weight = ".5"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/SignInText"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/NewAccountText"
            android:layout_marginStart="10dp"
            android:id="@+id/text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text"
            android:text="@string/ClickHereText"
            android:layout_marginStart="10dp"
            android:id="@+id/SignInDialogNewAccountText"/>
    </RelativeLayout>
</LinearLayout>