<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:background="#666"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="#fff"
        />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:stackFromBottom="true"
        />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:background="#666"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:stackFromBottom="true"
        />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/button_scan"
        />
</LinearLayout>