<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LightsFragment"
    android:background="@drawable/blurredbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/white_semi_transparent_roundedcorners">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ManualColorText"
            android:textAlignment="center"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RedText"
            android:textAlignment="center"/>
        <SeekBar
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentRedSeekBar"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GreenText"
            android:textAlignment="center"/>
        <SeekBar
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentGreenSeekBar" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BlueText"
            android:textAlignment="center"/>
        <SeekBar
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentBlueSeekBar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/white_semi_transparent_roundedcorners">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreMadeColorText"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/White"
                android:id="@+id/LightFragmentWhiteSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Red"
                android:id="@+id/LightFragmentRedSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Green"
                android:id="@+id/LightFragmentGreenSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Blue"
                android:id="@+id/LightFragmentBlueSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Purple"
                android:id="@+id/LightFragmentPurpleSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Pink"
                android:id="@+id/LightFragmentPinkSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Yellow"
                android:id="@+id/LightFragmentYellowSelector"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:background="@color/Orange"
                android:id="@+id/LightFragmentOrangeSelector"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/white_semi_transparent_roundedcorners">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectedColorText"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView1"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView2"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView3"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView4"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView5"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView6"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView7"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".125"
                android:id="@+id/ColorPreviewView8"
                />

        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentTheaterButton"
            android:layout_gravity="start"
            android:text="@string/Pattern1Text"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentRainbow1Button"
            android:layout_gravity="center"
            android:text="@string/Pattern2Text"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentRainbow2Button"
            android:layout_gravity="end"
            android:text="@string/Pattern3Text"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentTurnOnButton"
            android:layout_gravity="center"
            android:text="@string/TurnLightsOnText"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightFragmentBackButton"
            android:layout_gravity="start"
            android:text="@string/BackText"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TurnLightsOffButton"
            android:layout_gravity="end"
            android:text="@string/TurnLightsOffText"
            android:background="@drawable/peblgreenroundedcornerssemitransparent"/>

    </FrameLayout>
</LinearLayout>